--- a/options.html
+++ b/options.html
@@ -34,6 +34,9 @@
         <select id="fontSelect">
             <option value="vazirmatn">Vazir Matn</option>
             <option value="iransans">Iran Sans</option>
+            <option value="iransans-light">Iran Sans Light</option>
+			<option value="iransans-ultra-light">Iran Sans Ultra Light</option>
+            <option value="iransans-thin">Iran Sans Thin</option>						
             <option value="iranyekan">Iran Yekan</option>
         </select>
         <button id="saveButton">Save</button>
